<resources>
    <string name="app_name">WorkPlus</string>
    <string name="send_to_app">Send to WorkPlus</string>
    <string name="test_share_url">测试集成分享 url</string>
    <string name="item_chat">Messages</string>
    <string name="item_contact">Contacts</string>
    <string name="item_find">Discover</string>
    <string name="item_app">Applications</string>
    <string name="item_about_me">Me</string>
    <string name="item_email">Email</string>
    <string name="portal">Portal</string>
    <string name="knowledge">Knowledge</string>
    <string name="arrange_class">排班</string>
    <string name="email_setting">Email Setting</string>
    <string name="email_remind">New Email Remind Setting</string>
    <string name="email_sync_background">Sync In Backgound</string>
    <string name="received_email_remind">Received New Email Remind</string>
    <string name="background_email_sync">Sync Email In Background</string>
    <string name="sync_duration">Sync Time</string>
    <string name="cal_sync_setting">日历同步设置</string>
    <string name="cal_sync_setting_on">开启日历同步</string>
    <string name="clear_local_cal_data">清除本地日历数据</string>
    <string name="message_receiving">loading…</string>
    <string name="opening_work_check_in">opening…</string>
    <string name="open_ip_tip">If the connection is unstable, please turn directly connected IP</string>
    <string name="valid_info">Enter phone number</string>
    <string name="new_register">Sign Up</string>
    <string name="baiduMapKey">R5mUZooFPK7KGEGjyfE2KgG2</string>
    <string name="username_or_password_not_allowed_empty">User name and password are not be empty</string>
    <string name="login_success">Login successfully</string>
    <string name="action_search">Search</string>
    <string name="action_settings">More</string>
    <string name="app_icon">System icon</string>
    <string name="searchSuccess">Search</string>
    <string name="more">More</string>
    <string name="chat_item_avatar">Profile Photo</string>
    <string name="chat_item_last_message">Chat Details</string>
    <string name="chat_item_time">上午 09:00</string>
    <string name="activity_promote">Promotion</string>
    <string name="file_assistant">File assistant</string>
    <string name="college_circle">Moments</string>
    <string name="setting">Settings</string>
    <string name="config_vpn_setting">VPN Settings</string>
    <string name="qr_postcard">My QR code</string>
    <string name="about">About</string>
    <string name="new_version">The latest version</string>
    <string name="header_title">Profile</string>
    <string name="modify_personal_info">Modify Personal Info</string>
    <string name="switch_current_org">Switch the Org</string>
    <string name="group_qrcode_title">Group QR Code Card</string>
    <string name="join_group">Join group</string>
    <string name="save_img">Save the picture</string>
    <string name="tip_qrcode_expire">Valid until %s</string>
    <string name="select_file">Local Files</string>
    <string name="already_select">Selected %s</string>
    <string name="phone_file">Phone files</string>
    <string name="recent_file">Recent</string>
    <string name="empty_current_folder">The folder is empty</string>
    <string name="max_select_file_num">You can only select up to %s files</string>
    <string name="max_single_select_file_size">A single file can not exceed %s</string>
    <string name="max_total_select_file_size">The total size of the selected file can not exceed %s</string>
    <string name="photo_album">Album</string>
    <string name="me">我</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="discussion_max_user_alert">Group has reached the maximum number and can not be added</string>
    <string name="select_user_zero">No staff selected</string>
    <string name="create_group_fail">Create group failed</string>
    <string name="create_group_db_fail">Operation database failed when create group</string>
    <string name="sync_group_fail">Synchronization group failed</string>
    <string name="sync_group_success">Synchronization group info is successful</string>
    <string name="sync_group_db_fail">Synchronization group info failed</string>
    <string name="discussion_title">Group list</string>
    <string name="access_token_expires">Account certification has expired, please re-register</string>
    <string name="get_param_error">Parameter error</string>
    <string name="query_group_error">Get group info failed</string>
    <string name="get_offline_message_fail">Pull offline message failed</string>
    <string name="login_kick">The account has been logged in or is offline</string>
    <string name="pwd_has_been_reset">The password for the account has been reset, please re-register</string>
    <string name="user_has_been_removed">Account has been deleted</string>
    <string name="many_job_title">(Multiple positions)</string>
    <string name="no_result">Search for no results, try another word </string>
    <string name="i_known">I understand</string>
    <string name="college">Colleague</string>
    <string name="session">Conversation</string>
    <string name="copy_url">Copy URL</string>
    <string name="browser">Browser</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="share_success">Share success</string>
    <string name="tip_undo_message">%s have recalled a message</string>
    <string name="tip_undo_message_from_service_app">服务号消息已被撤回</string>
    <string name="not_initialize">Unused</string>
    <string name="tip_not_initialize">（Unused）</string>
    <string name="save_success">Saved successfully</string>
    <string name="save_wrong">Save failed</string>
    <string name="invite_you">Invite you to join%s</string>
    <string name="org_owner_invite">%1$s create an Org %3$s on -%2$s，invite you to join。</string>
    <string name="org_invite">%1$s in %2$s invite you to join -%3$s。</string>
    <string name="send_card">Make sure to send the card</string>
    <string name="send_link">Make sure to share the link</string>
    <string name="nickname_too_long">Nickname can not be longer than 40 characters</string>
    <string name="signature_too_long">Personal signature can not be longer than 20 characters</string>
    <string name="system_notice">System Notification</string>
    <string name="share_file_notice">Network disk file reminder</string>
    <string name="org_switcher">Switch Org</string>
    <string name="qrcode_recognition">Identify the QR code on the picture</string>
    <string name="loading">loading...</string>
    <string name="holder_transparent">transparent</string>
    <string name="video">Video Call</string>
    <string name="audio">Voice Call</string>
    <string name="audio2">Audio</string>
    <string name="audio3">Audio</string>
    <string name="video2">Video</string>
    <string name="tip_not_online">（Offline）</string>
    <string name="clear">Clear</string>
    <string name="retry">Retry</string>
    <string name="offline_failed">Application load failed, please try again later！</string>
    <string name="not_support_emoji">Does not support emoticons</string>
    <string name="article">Article</string>
    <string name="article_tag">Image Text</string>
    <string name="edit_text_letter_max">A maximum of %1$s characters</string>
    <string name="file">File</string>
    <string name="common_switch">switch</string>
    <string name="account_secure_valid">Account security verification</string>
    <string name="email_auth_error_content">E-mail Account authentication failed \n Please check the account password is set correctly</string>
    <string name="relogin_email">relogin</string>
    <string name="remind_later">Remind later</string>
    <string name="check_detail">View details</string>
    <string name="unit_ge">Unit</string>
    <string name="workplace">Workplace</string>
    <string name="minutes_show">%s minutes</string>
    <string name="hours_show">%s hours</string>
    <string name="transaction_assistant">Trading Assistant</string>
    <string name="reconnect">重连</string>
    <string name="exit">退出</string>
    <string name="pc_client">PC client</string>
    <string name="mobile_client">mobile client</string>
    <string name="im_service">IM Service</string>
    <string name="multi_select">Multiple</string>
    <string name="single_select">单选</string>
    <string name="device">Devices</string>
    <string name="ask_sure_to_back">Confirm to return?</string>
    <string name="you_received_a_message">You\\\'ve got a message</string>
    <string name="day_label">%s day</string>
    <string name="reset">rest</string>
    <string name="reset_successfully">reset successfully</string>
    <string name="publish_text">Release</string>
    <string name="custom_defined">Self-defined</string>
    <string name="message_expired">message expired</string>
    <string name="no_data_temp">No data</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_text">Text</string>
    <string name="instantly">immediately</string>
    <string name="common_general">General</string>
    <string name="common_open">Open</string>
    <string name="common_auth">Certification</string>
    <string name="common_nothing">Null</string>
    <string name="go_to_setting2">Go to Set</string>
    <string name="try_again">Try Again</string>
    <string name="common_remark">Remarks</string>
    <string name="range_of_application">Scope of application</string>
    <string name="putaway_or_not">Publish?</string>
    <string name="common_sort">Sort</string>
    <string name="scope_all">All people can view</string>
    <string name="scope_part">Partially visible</string>
    <string name="common_no_limit">Without limiting </string>
    <string name="common_sort_number">Sort number</string>
    <string name="common_please_sort_number_hint">Please enter the sort number</string>
    <string name="common_valid_duration">Expiration date</string>
    <string name="link_jump">Link</string>
    <string name="please_input_link_jump_hint">Please enter the URL starting with http:// or https://</string>
    <string name="remove_successfully">Removed successfully</string>
    <string name="name_title">Name</string>
    <string name="common_view">View</string>
    <string name="common_expired">Expired</string>
    <string name="common_read_more">Read More</string>
    <string name="common_sum_people">%s</string>
    <string name="common_add">Add</string>
    <string name="length_is_not_more_than_characters">Cannot exceed %s digits</string>
    <string name="message_type_link">Link</string>
    <string name="qrcode">Scan QR Code</string>
    <string name="scan_text">Align QR Code \n barcode within frame to scan</string>
    <string name="qr_and_bar">QR code, Bar code</string>
    <string name="bar_code">Bar code dedicated</string>
    <string name="wx">WeChat</string>
    <string name="wx_friends">WeChat Moments</string>
    <string name="qq">QQ</string>
    <string name="qzone">Qzone</string>
    <string name="qr_login_to_common">Login confirmation</string>
    <string name="qr_login_confirm">Enter</string>
    <string name="qr_login_security_tip">In order to secure your account, make sure that their own operations</string>
    <string name="cancel_login">Cancel</string>
    <string name="session_multipart_chat">Chat History</string>
    <string name="favorite_image_and_video">Media</string>
    <string name="device_info">Device Info</string>
    <string name="device_code">Device ID: </string>
    <string name="device_name">Device Name: </string>
    <string name="device_type">Device Type: </string>
    <string name="turn_on_emp_assistant">开启企业来电助手</string>
    <string name="turn_off_emp_assistant">关闭企业来电助手</string>
    <string name="emp_assistant_tip">\"企业来电助手\"开启后，有内部员工来电时会在来电界面提示员工姓名、部门信息。</string>
</resources>