<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/font_size_16sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/device_info"
        android:textColor="@color/blue_lock" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/blue_lock"></View>

    <TextView
        android:id="@+id/tv_device_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/font_size_14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/common_text_color"
        android:text="@string/device_code"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/font_size_14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/common_text_color"
        android:text="@string/device_name"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_device_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/font_size_14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/common_text_color"
        android:text="@string/device_type"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copy_item"
            style="@style/font_size_14sp"
            android:textColor="@color/white"
            android:background="@drawable/round_rect_blue"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel"
            android:layout_marginLeft="20dp"
            style="@style/font_size_14sp"
            android:textColor="@color/white"
            android:background="@drawable/round_rect_gray"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>


    </LinearLayout>

</LinearLayout>