<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/qr_camera_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.foreveross.atwork.component.qrcode.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_scan_tip"
        style="@style/font_size_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/scan_text"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/turn_light"
        style="@style/font_size_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_scan_tip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:background="@color/translation_333"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/q_and_b"
            style="@style/font_size_12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/qr_and_bar" />

        <TextView
            android:id="@+id/barcode"
            style="@style/font_size_12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/bar_code" />

    </LinearLayout>


    <View
        android:id="@+id/v_fake_statusbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/translation_333" />

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/v_fake_statusbar"
        android:background="@color/translation_333">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/icon_back_white" />


        <TextView
            android:id="@+id/scan"
            style="@style/font_size_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/back_btn"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:maxLength="20"
            android:maxWidth="200dp"
            android:text="@string/qrcode"
            android:textColor="@color/white" />

        <!-- 更多按钮 -->
        <TextView
            android:id="@+id/photo_album"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/more"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/photo_album"
            android:textColor="@color/white" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/barcode_vertical_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:background="@mipmap/bar_con_tip_vertical" />

    <ImageView
        android:id="@+id/barcode_vertical_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/barcode_vertical_tip"
        android:background="@mipmap/icon_qrcode_light"
        android:visibility="gone" />


</RelativeLayout>