<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar_common" />

    <LinearLayout
        android:id="@+id/llOpenEmpIncomingCallLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="13dp">

        <ImageView
            android:id="@+id/ivOpenEmpIncoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_sync_msgs_setting_unselect" />

        <TextView
            android:id="@+id/tvOpenEmpIncoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/turn_on_emp_assistant"
            android:textColor="@color/common_text_color"
            android:textSize="14sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/llCloseEmpIncomingCallLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="13dp">

        <ImageView
            android:id="@+id/ivCloseEmpIncoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_sync_msgs_setting_unselect" />

        <TextView
            android:id="@+id/tvCloseEmpIncoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/turn_off_emp_assistant"
            android:textColor="@color/common_text_color"
            android:textSize="14sp" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emp_assistant_tip"
        android:textSize="12sp"
        android:lineSpacingExtra="2dp"
        android:textColor="#A6A6A6"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        />

</LinearLayout>